2007-08-24  Stefan Harmeling  <harmeling@gmail.com>

	* object.c (extend): wrote function 'extend' which is able to add
	new cases to function, or to create new functions.

	* eval.c (call_rha_fun): uses the new representation of functions
	and is able to find the implementation of the first function that
	has the same number of arguments.

	* core.c (fn_fn, create_fn_data, create_fn_data_entry): the inner
	representation of function has changed. now all information is
	stored in a slot 'fn_data' which must contain a list of 3-tuples,
	each of which has entries 'argnames', 'env', and 'fnbody'.

	* prules.c (resolve_assign_prule): now assignments to symbols
	still creates assignment, but assignments to calls creates
	extends:

	    x=0          (assign local x 0)
	    a.x=0        (assign a x 0)

	    f(x)=0       (extend local (quote f) (quote (x)) local (quote 0))
	    a.f(x)=0     (extend a     (quote f) (quote (x)) local (quote 0))

	* eval.c (call_rha_fun): added 'static'

	* parse.c (resolve_code_block): now a sequence of commands in
	curly brackets is split after a code block (in curly brackets) if
	not a "second-order-keyword" such as currently 'else' or 'catch'
	is following.  However, this solution is preliminary, since if we
	extend the syntax with new complicated freefix form we need to add
	them here by hand.

	* rha_lexer.l: removed the case with \n  \n that generated a
	semicolon, since now 'resolve_code_block' deals with it.

	* rhabarber.c (main): the outer-most (do_sym 17; 42+42) is now
	dealt with outside the eval function, which makes sense, since it
	only happens in the real-eval-loop.  now typing 'deliver 17' at
	the prompt generates (do_sym (deliver 17)) but doesn't open a
	BLOCK_FRAME and thus issues the correct error.

2007-08-23  Stefan Harmeling  <harmeling@gmail.com>

	* object.c (extend): added extend, which is not done yet and which
	doesn't really extend right now, but should only overwrite an
	existing function definiton.
